minor edits, more data

--- a/RedditData.ipynb
+++ b/RedditData.ipynb
@@ -15,15 +15,25 @@
     "import json\n",
     "import sys\n",
     "import time\n",
-    "## acknowledgements\n",
+    "\n",
     "'''\n",
+    "\n",
+    "notes:\n",
+    "\n",
+    "- traffic = reddit.subreddit(subreddit).traffic() is not available to us, sadly.\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "## acknowledgements\n",
+    "\n",
     "https://stackoverflow.com/questions/48358837/pulling-reddit-comments-using-python-praw-and-creating-a-dataframe-with-the-resu\n",
     "https://www.reddit.com/r/redditdev/comments/2e2q2l/praw_downvote_count_always_zero/\n",
     "https://towardsdatascience.com/an-easy-tutorial-about-sentiment-analysis-with-deep-learning-and-keras-2bf52b9cba91\n",
     "\n",
     "For navigating pushshift: https://github.com/Watchful1/Sketchpad/blob/master/postDownloader.py\n",
     "\n",
-    "# traffic = reddit.subreddit(subreddit).traffic() is not available to us, sadly.\n",
     "'''\n",
     "\n",
     "with open(\"API.env\") as file:\n",
@@ -587,7 +597,236 @@
       "Target time: 1611273600, current end point 1611283779, remaining 10179\n",
       "Target time: 1611273600, current end point 1611281108, remaining 7508\n",
       "Target time: 1611273600, current end point 1611278410, remaining 4810\n",
-      "Target time: 1611273600, current end point 1611276529, remaining 2929\n"
+      "Target time: 1611273600, current end point 1611276529, remaining 2929\n",
+      "Target time: 1611273600, current end point 1611274879, remaining 1279\n",
+      "Target time: 1611273600, current end point 1611273618, remaining 18\n",
+      "Got 6367 submissions.\n",
+      "Getting the updated values.\n",
+      "Processing 2021-01-23 00:00:00 to 2021-01-24 00:00:00\n",
+      "Target time: 1611360000, current end point 1611446400, remaining 86400\n",
+      "Target time: 1611360000, current end point 1611444015, remaining 84015\n",
+      "Target time: 1611360000, current end point 1611441985, remaining 81985\n",
+      "Target time: 1611360000, current end point 1611439332, remaining 79332\n",
+      "Target time: 1611360000, current end point 1611437718, remaining 77718\n",
+      "Target time: 1611360000, current end point 1611435563, remaining 75563\n",
+      "Target time: 1611360000, current end point 1611433659, remaining 73659\n",
+      "Target time: 1611360000, current end point 1611431481, remaining 71481\n",
+      "Target time: 1611360000, current end point 1611429518, remaining 69518\n",
+      "Target time: 1611360000, current end point 1611427437, remaining 67437\n",
+      "Target time: 1611360000, current end point 1611425661, remaining 65661\n",
+      "Target time: 1611360000, current end point 1611423113, remaining 63113\n",
+      "Target time: 1611360000, current end point 1611421543, remaining 61543\n",
+      "Target time: 1611360000, current end point 1611419404, remaining 59404\n",
+      "Target time: 1611360000, current end point 1611417219, remaining 57219\n",
+      "Target time: 1611360000, current end point 1611414837, remaining 54837\n",
+      "Target time: 1611360000, current end point 1611412686, remaining 52686\n",
+      "Target time: 1611360000, current end point 1611410529, remaining 50529\n",
+      "Target time: 1611360000, current end point 1611406578, remaining 46578\n",
+      "Target time: 1611360000, current end point 1611401147, remaining 41147\n",
+      "Target time: 1611360000, current end point 1611395698, remaining 35698\n",
+      "Target time: 1611360000, current end point 1611390735, remaining 30735\n",
+      "Target time: 1611360000, current end point 1611386645, remaining 26645\n",
+      "Target time: 1611360000, current end point 1611383749, remaining 23749\n",
+      "Target time: 1611360000, current end point 1611380957, remaining 20957\n",
+      "Target time: 1611360000, current end point 1611378571, remaining 18571\n",
+      "Target time: 1611360000, current end point 1611376420, remaining 16420\n",
+      "Target time: 1611360000, current end point 1611374547, remaining 14547\n",
+      "Target time: 1611360000, current end point 1611372733, remaining 12733\n",
+      "Target time: 1611360000, current end point 1611371046, remaining 11046\n",
+      "Target time: 1611360000, current end point 1611369198, remaining 9198\n",
+      "Target time: 1611360000, current end point 1611367222, remaining 7222\n",
+      "Target time: 1611360000, current end point 1611365589, remaining 5589\n",
+      "Target time: 1611360000, current end point 1611363959, remaining 3959\n",
+      "Target time: 1611360000, current end point 1611362445, remaining 2445\n",
+      "Target time: 1611360000, current end point 1611360988, remaining 988\n",
+      "Target time: 1611360000, current end point 1611360016, remaining 16\n",
+      "Got 3583 submissions.\n",
+      "Getting the updated values.\n",
+      "Processing 2021-01-24 00:00:00 to 2021-01-25 00:00:00\n",
+      "Target time: 1611446400, current end point 1611532800, remaining 86400\n",
+      "Target time: 1611446400, current end point 1611530228, remaining 83828\n",
+      "Target time: 1611446400, current end point 1611527855, remaining 81455\n",
+      "Target time: 1611446400, current end point 1611525848, remaining 79448\n",
+      "Target time: 1611446400, current end point 1611524039, remaining 77639\n",
+      "Target time: 1611446400, current end point 1611522168, remaining 75768\n",
+      "Target time: 1611446400, current end point 1611520211, remaining 73811\n",
+      "Target time: 1611446400, current end point 1611517432, remaining 71032\n",
+      "Target time: 1611446400, current end point 1611515668, remaining 69268\n",
+      "Target time: 1611446400, current end point 1611513048, remaining 66648\n",
+      "Target time: 1611446400, current end point 1611511237, remaining 64837\n",
+      "Target time: 1611446400, current end point 1611508930, remaining 62530\n",
+      "Target time: 1611446400, current end point 1611506908, remaining 60508\n",
+      "Target time: 1611446400, current end point 1611504176, remaining 57776\n",
+      "Target time: 1611446400, current end point 1611501627, remaining 55227\n",
+      "Target time: 1611446400, current end point 1611498396, remaining 51996\n",
+      "Target time: 1611446400, current end point 1611494911, remaining 48511\n",
+      "Target time: 1611446400, current end point 1611488605, remaining 42205\n",
+      "Target time: 1611446400, current end point 1611481377, remaining 34977\n",
+      "Target time: 1611446400, current end point 1611474568, remaining 28168\n",
+      "Target time: 1611446400, current end point 1611470251, remaining 23851\n",
+      "Target time: 1611446400, current end point 1611465889, remaining 19489\n",
+      "Target time: 1611446400, current end point 1611460844, remaining 14444\n",
+      "Target time: 1611446400, current end point 1611457141, remaining 10741\n",
+      "Target time: 1611446400, current end point 1611454493, remaining 8093\n",
+      "Target time: 1611446400, current end point 1611451621, remaining 5221\n",
+      "Target time: 1611446400, current end point 1611448782, remaining 2382\n",
+      "Target time: 1611446400, current end point 1611446630, remaining 230\n",
+      "Target time: 1611446400, current end point 1611446483, remaining 83\n",
+      "Got 2705 submissions.\n",
+      "Getting the updated values.\n",
+      "Processing 2021-01-25 00:00:00 to 2021-01-26 00:00:00\n",
+      "Target time: 1611532800, current end point 1611619200, remaining 86400\n",
+      "Target time: 1611532800, current end point 1611618629, remaining 85829\n",
+      "Target time: 1611532800, current end point 1611618014, remaining 85214\n",
+      "Target time: 1611532800, current end point 1611617440, remaining 84640\n",
+      "Target time: 1611532800, current end point 1611616866, remaining 84066\n",
+      "Target time: 1611532800, current end point 1611616290, remaining 83490\n",
+      "Target time: 1611532800, current end point 1611615825, remaining 83025\n",
+      "Target time: 1611532800, current end point 1611615338, remaining 82538\n",
+      "Target time: 1611532800, current end point 1611614955, remaining 82155\n",
+      "Target time: 1611532800, current end point 1611614579, remaining 81779\n",
+      "Target time: 1611532800, current end point 1611614149, remaining 81349\n",
+      "Target time: 1611532800, current end point 1611613748, remaining 80948\n",
+      "Target time: 1611532800, current end point 1611613312, remaining 80512\n",
+      "Target time: 1611532800, current end point 1611612835, remaining 80035\n",
+      "Target time: 1611532800, current end point 1611612447, remaining 79647\n",
+      "Target time: 1611532800, current end point 1611612066, remaining 79266\n",
+      "Target time: 1611532800, current end point 1611611727, remaining 78927\n",
+      "Target time: 1611532800, current end point 1611611342, remaining 78542\n",
+      "Target time: 1611532800, current end point 1611610951, remaining 78151\n",
+      "Target time: 1611532800, current end point 1611610523, remaining 77723\n",
+      "Target time: 1611532800, current end point 1611610073, remaining 77273\n",
+      "Target time: 1611532800, current end point 1611609699, remaining 76899\n",
+      "Target time: 1611532800, current end point 1611609302, remaining 76502\n",
+      "Target time: 1611532800, current end point 1611608888, remaining 76088\n",
+      "Target time: 1611532800, current end point 1611608504, remaining 75704\n",
+      "Target time: 1611532800, current end point 1611608135, remaining 75335\n",
+      "Target time: 1611532800, current end point 1611607695, remaining 74895\n",
+      "Target time: 1611532800, current end point 1611607410, remaining 74610\n",
+      "Target time: 1611532800, current end point 1611607074, remaining 74274\n",
+      "Target time: 1611532800, current end point 1611606740, remaining 73940\n",
+      "Target time: 1611532800, current end point 1611606427, remaining 73627\n",
+      "Target time: 1611532800, current end point 1611606080, remaining 73280\n",
+      "Target time: 1611532800, current end point 1611605689, remaining 72889\n",
+      "Target time: 1611532800, current end point 1611605351, remaining 72551\n",
+      "Target time: 1611532800, current end point 1611605071, remaining 72271\n",
+      "Target time: 1611532800, current end point 1611604745, remaining 71945\n",
+      "Target time: 1611532800, current end point 1611604472, remaining 71672\n",
+      "Target time: 1611532800, current end point 1611604125, remaining 71325\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Target time: 1611532800, current end point 1611603753, remaining 70953\n",
+      "Target time: 1611532800, current end point 1611603435, remaining 70635\n",
+      "Target time: 1611532800, current end point 1611603072, remaining 70272\n",
+      "Target time: 1611532800, current end point 1611602793, remaining 69993\n",
+      "Target time: 1611532800, current end point 1611602483, remaining 69683\n",
+      "Target time: 1611532800, current end point 1611602159, remaining 69359\n",
+      "Target time: 1611532800, current end point 1611601876, remaining 69076\n",
+      "Target time: 1611532800, current end point 1611601505, remaining 68705\n",
+      "Target time: 1611532800, current end point 1611601141, remaining 68341\n",
+      "Target time: 1611532800, current end point 1611600835, remaining 68035\n",
+      "Target time: 1611532800, current end point 1611600552, remaining 67752\n",
+      "Target time: 1611532800, current end point 1611600254, remaining 67454\n",
+      "Target time: 1611532800, current end point 1611599874, remaining 67074\n",
+      "Target time: 1611532800, current end point 1611599599, remaining 66799\n",
+      "Target time: 1611532800, current end point 1611599316, remaining 66516\n",
+      "Target time: 1611532800, current end point 1611599041, remaining 66241\n",
+      "Target time: 1611532800, current end point 1611598752, remaining 65952\n",
+      "Target time: 1611532800, current end point 1611598464, remaining 65664\n",
+      "Target time: 1611532800, current end point 1611598180, remaining 65380\n",
+      "Target time: 1611532800, current end point 1611597926, remaining 65126\n",
+      "Target time: 1611532800, current end point 1611597659, remaining 64859\n",
+      "Target time: 1611532800, current end point 1611597384, remaining 64584\n",
+      "Target time: 1611532800, current end point 1611597108, remaining 64308\n",
+      "Target time: 1611532800, current end point 1611596872, remaining 64072\n",
+      "Target time: 1611532800, current end point 1611596653, remaining 63853\n",
+      "Target time: 1611532800, current end point 1611596432, remaining 63632\n",
+      "Target time: 1611532800, current end point 1611596242, remaining 63442\n",
+      "Target time: 1611532800, current end point 1611596047, remaining 63247\n",
+      "Target time: 1611532800, current end point 1611595864, remaining 63064\n",
+      "Target time: 1611532800, current end point 1611595691, remaining 62891\n",
+      "Target time: 1611532800, current end point 1611595507, remaining 62707\n",
+      "Target time: 1611532800, current end point 1611595356, remaining 62556\n",
+      "Target time: 1611532800, current end point 1611595166, remaining 62366\n",
+      "Target time: 1611532800, current end point 1611594966, remaining 62166\n",
+      "Target time: 1611532800, current end point 1611594750, remaining 61950\n",
+      "Target time: 1611532800, current end point 1611594548, remaining 61748\n",
+      "Target time: 1611532800, current end point 1611594278, remaining 61478\n",
+      "Target time: 1611532800, current end point 1611594054, remaining 61254\n",
+      "Target time: 1611532800, current end point 1611593805, remaining 61005\n",
+      "Target time: 1611532800, current end point 1611593575, remaining 60775\n",
+      "Target time: 1611532800, current end point 1611593372, remaining 60572\n",
+      "Target time: 1611532800, current end point 1611593140, remaining 60340\n",
+      "Target time: 1611532800, current end point 1611592868, remaining 60068\n",
+      "Target time: 1611532800, current end point 1611592646, remaining 59846\n",
+      "Target time: 1611532800, current end point 1611592447, remaining 59647\n",
+      "Target time: 1611532800, current end point 1611592256, remaining 59456\n",
+      "Target time: 1611532800, current end point 1611592061, remaining 59261\n",
+      "Target time: 1611532800, current end point 1611591849, remaining 59049\n",
+      "Target time: 1611532800, current end point 1611591684, remaining 58884\n",
+      "Target time: 1611532800, current end point 1611591532, remaining 58732\n",
+      "Target time: 1611532800, current end point 1611591397, remaining 58597\n",
+      "Target time: 1611532800, current end point 1611591239, remaining 58439\n",
+      "Target time: 1611532800, current end point 1611591079, remaining 58279\n",
+      "Target time: 1611532800, current end point 1611590896, remaining 58096\n",
+      "Target time: 1611532800, current end point 1611590707, remaining 57907\n",
+      "Target time: 1611532800, current end point 1611590518, remaining 57718\n",
+      "Target time: 1611532800, current end point 1611590330, remaining 57530\n",
+      "Target time: 1611532800, current end point 1611590150, remaining 57350\n",
+      "Target time: 1611532800, current end point 1611589963, remaining 57163\n",
+      "Target time: 1611532800, current end point 1611589799, remaining 56999\n",
+      "Target time: 1611532800, current end point 1611589618, remaining 56818\n",
+      "Target time: 1611532800, current end point 1611589429, remaining 56629\n",
+      "Target time: 1611532800, current end point 1611589209, remaining 56409\n",
+      "Target time: 1611532800, current end point 1611588993, remaining 56193\n",
+      "Target time: 1611532800, current end point 1611588735, remaining 55935\n",
+      "Target time: 1611532800, current end point 1611588464, remaining 55664\n",
+      "Target time: 1611532800, current end point 1611588195, remaining 55395\n",
+      "Target time: 1611532800, current end point 1611587968, remaining 55168\n",
+      "Target time: 1611532800, current end point 1611587711, remaining 54911\n",
+      "Target time: 1611532800, current end point 1611587418, remaining 54618\n",
+      "Target time: 1611532800, current end point 1611587138, remaining 54338\n",
+      "Target time: 1611532800, current end point 1611586832, remaining 54032\n",
+      "Target time: 1611532800, current end point 1611586540, remaining 53740\n",
+      "Target time: 1611532800, current end point 1611586242, remaining 53442\n",
+      "Target time: 1611532800, current end point 1611585841, remaining 53041\n",
+      "Target time: 1611532800, current end point 1611585441, remaining 52641\n",
+      "Target time: 1611532800, current end point 1611584909, remaining 52109\n",
+      "Target time: 1611532800, current end point 1611584347, remaining 51547\n",
+      "Target time: 1611532800, current end point 1611583693, remaining 50893\n",
+      "Target time: 1611532800, current end point 1611582865, remaining 50065\n",
+      "Target time: 1611532800, current end point 1611582087, remaining 49287\n",
+      "Target time: 1611532800, current end point 1611581271, remaining 48471\n",
+      "Target time: 1611532800, current end point 1611580264, remaining 47464\n",
+      "Target time: 1611532800, current end point 1611579272, remaining 46472\n",
+      "Target time: 1611532800, current end point 1611577992, remaining 45192\n",
+      "Target time: 1611532800, current end point 1611576397, remaining 43597\n",
+      "Target time: 1611532800, current end point 1611574637, remaining 41837\n",
+      "Target time: 1611532800, current end point 1611572838, remaining 40038\n",
+      "Target time: 1611532800, current end point 1611571314, remaining 38514\n",
+      "Target time: 1611532800, current end point 1611569959, remaining 37159\n",
+      "Target time: 1611532800, current end point 1611569051, remaining 36251\n",
+      "Target time: 1611532800, current end point 1611568172, remaining 35372\n",
+      "Target time: 1611532800, current end point 1611567487, remaining 34687\n",
+      "Target time: 1611532800, current end point 1611566428, remaining 33628\n",
+      "Target time: 1611532800, current end point 1611563362, remaining 30562\n",
+      "Target time: 1611532800, current end point 1611560343, remaining 27543\n",
+      "Target time: 1611532800, current end point 1611557270, remaining 24470\n",
+      "Target time: 1611532800, current end point 1611553330, remaining 20530\n",
+      "Target time: 1611532800, current end point 1611550240, remaining 17440\n",
+      "Target time: 1611532800, current end point 1611547331, remaining 14531\n",
+      "Target time: 1611532800, current end point 1611544141, remaining 11341\n",
+      "Target time: 1611532800, current end point 1611541625, remaining 8825\n",
+      "Target time: 1611532800, current end point 1611538802, remaining 6002\n",
+      "Target time: 1611532800, current end point 1611536484, remaining 3684\n",
+      "Target time: 1611532800, current end point 1611534167, remaining 1367\n",
+      "Target time: 1611532800, current end point 1611532804, remaining 4\n",
+      "Got 14260 submissions.\n",
+      "Getting the updated values.\n"
      ]
     }
    ],
