--- a/RedditData.ipynb
+++ b/RedditData.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 338,
    "metadata": {
     "scrolled": true
    },
@@ -1386,6 +1386,22 @@
       "Got 43464 submissions.\n",
       "Getting the updated values.\n"
      ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Length of values (43456) does not match length of index (43464)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-338-bf36a5af5cfd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     60\u001b[0m     \u001b[1;31m# Decided to go day by day to avoid losing data due to crashing partway through\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     61\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"Processing {window_left} to {window_right}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 62\u001b[1;33m     \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_all_submissions\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconvert_to_utc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwindow_left\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconvert_to_utc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwindow_right\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"wallstreetbets\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     63\u001b[0m     \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_pickle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"Data/wsb_start{convert_to_utc(window_left)}.pkl\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     64\u001b[0m     \u001b[0msubreddit_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msubreddit_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mignore_index\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-338-bf36a5af5cfd>\u001b[0m in \u001b[0;36mget_all_submissions\u001b[1;34m(start_time, end_time, subreddit)\u001b[0m\n\u001b[0;32m     45\u001b[0m         \u001b[0mratios\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0msubmission\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupvote_ratio\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     46\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 47\u001b[1;33m     \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'score'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'total_awards_received'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'upvote_ratio'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mscores\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtotal_awards_received\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mratios\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     48\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     49\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\MachineLearning\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__setitem__\u001b[1;34m(self, key, value)\u001b[0m\n\u001b[0;32m   3161\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3162\u001b[0m             \u001b[1;31m# set column\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3163\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_set_item\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3164\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3165\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_setitem_slice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mslice\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\MachineLearning\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m_set_item\u001b[1;34m(self, key, value)\u001b[0m\n\u001b[0;32m   3237\u001b[0m         \"\"\"\n\u001b[0;32m   3238\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_ensure_valid_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3239\u001b[1;33m         \u001b[0mvalue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_sanitize_column\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3240\u001b[0m         \u001b[0mNDFrame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_set_item\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3241\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\MachineLearning\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m_sanitize_column\u001b[1;34m(self, key, value, broadcast)\u001b[0m\n\u001b[0;32m   3894\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3895\u001b[0m             \u001b[1;31m# turn me into an ndarray\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3896\u001b[1;33m             \u001b[0mvalue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msanitize_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3897\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mIndex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3898\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\MachineLearning\\lib\\site-packages\\pandas\\core\\internals\\construction.py\u001b[0m in \u001b[0;36msanitize_index\u001b[1;34m(data, index)\u001b[0m\n\u001b[0;32m    750\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    751\u001b[0m         raise ValueError(\n\u001b[1;32m--> 752\u001b[1;33m             \u001b[1;34m\"Length of values \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    753\u001b[0m             \u001b[1;34mf\"({len(data)}) \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    754\u001b[0m             \u001b[1;34m\"does not match length of index \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Length of values (43456) does not match length of index (43464)"
+     ]
     }
    ],
    "source": [
@@ -1441,22 +1457,110 @@
     "\n",
     "subreddit_df = pd.DataFrame()\n",
     "\n",
-    "start = dt.datetime(2021, 1,1)\n",
-    "end = dt.datetime(2021, 5, 7) #dt.datetime.now()\n",
-    "delta = dt.timedelta(days=1)\n",
-    "window_left = start\n",
-    "window_right = start + delta\n",
+    "new_start = False #False for picking up where it was left off\n",
+    "if new_start == True:\n",
+    "    start = dt.datetime(2021, 1,1)\n",
+    "    end = dt.datetime(2021, 5, 7) #dt.datetime.now()\n",
+    "    delta = dt.timedelta(days=1)\n",
+    "    window_left = start\n",
+    "    window_right = start + delta\n",
     "\n",
     "while window_right < end:\n",
     "    # Decided to go day by day to avoid losing data due to crashing partway through\n",
     "    print(f\"Processing {window_left} to {window_right}\")\n",
-    "    df = get_all_submissions(convert_to_utc(window_left), convert_to_utc(window_right), \"wallstreetbets\")\n",
+    "    \n",
+    "    start_time = convert_to_utc(window_left)\n",
+    "    end_time = convert_to_utc(window_right)\n",
+    "    df = get_all_submissions(start_time, end_time, \"wallstreetbets\")\n",
     "    df.to_pickle(f\"Data/wsb_start{convert_to_utc(window_left)}.pkl\")\n",
     "    subreddit_df = subreddit_df.append(df, ignore_index = True)\n",
     "    window_left += delta\n",
     "    window_right += delta\n",
     "\n",
     "subreddit_df.to_pickle(\"Data/2021wsb.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Target time: 1611705600, current end point 1611792000, remaining 86400\n",
+      "Target time: 1611705600, current end point 1611790592, remaining 84992\n",
+      "Target time: 1611705600, current end point 1611790501, remaining 84901\n",
+      "Target time: 1611705600, current end point 1611790403, remaining 84803\n",
+      "Target time: 1611705600, current end point 1611790314, remaining 84714\n",
+      "Target time: 1611705600, current end point 1611790228, remaining 84628\n",
+      "Target time: 1611705600, current end point 1611790141, remaining 84541\n",
+      "Target time: 1611705600, current end point 1611790043, remaining 84443\n",
+      "Target time: 1611705600, current end point 1611789976, remaining 84376\n",
+      "Target time: 1611705600, current end point 1611789875, remaining 84275\n",
+      "Target time: 1611705600, current end point 1611789811, remaining 84211\n",
+      "Target time: 1611705600, current end point 1611789726, remaining 84126\n",
+      "Target time: 1611705600, current end point 1611789628, remaining 84028\n",
+      "Target time: 1611705600, current end point 1611789544, remaining 83944\n",
+      "Target time: 1611705600, current end point 1611789452, remaining 83852\n",
+      "Target time: 1611705600, current end point 1611789366, remaining 83766\n",
+      "Target time: 1611705600, current end point 1611789263, remaining 83663\n",
+      "Target time: 1611705600, current end point 1611789185, remaining 83585\n",
+      "Target time: 1611705600, current end point 1611789119, remaining 83519\n",
+      "Target time: 1611705600, current end point 1611789040, remaining 83440\n",
+      "Target time: 1611705600, current end point 1611788946, remaining 83346\n",
+      "Target time: 1611705600, current end point 1611788868, remaining 83268\n",
+      "Target time: 1611705600, current end point 1611788777, remaining 83177\n",
+      "Target time: 1611705600, current end point 1611788699, remaining 83099\n",
+      "Target time: 1611705600, current end point 1611788611, remaining 83011\n",
+      "Target time: 1611705600, current end point 1611788522, remaining 82922\n"
+     ]
+    }
+   ],
+   "source": [
+    "start_time = convert_to_utc(window_left)\n",
+    "end_time = convert_to_utc(window_right)\n",
+    "subreddit = \"wallstreetbets\"\n",
+    "end = end_time\n",
+    "df = pd.DataFrame()\n",
+    "while end > start_time:\n",
+    "    time.sleep(1) # Requests are rate limited\n",
+    "    print(f\"Target time: {start_time}, current end point {end}, remaining {end - start_time}\")\n",
+    "\n",
+    "    url = f\"https://api.pushshift.io/reddit/submission/search/?after={start_time}&before={end}&sort_type=created_utc&sort=desc&subreddit={subreddit}&limit=1000\"\n",
+    "\n",
+    "    data = requests.get(url)\n",
+    "\n",
+    "\n",
+    "    if data.headers['Content-Type'] == 'application/json; charset=UTF-8':\n",
+    "        data_json = data.json()\n",
+    "        if len(data_json['data']) == 0:\n",
+    "            # break if there is no returned data\n",
+    "            break\n",
+    "\n",
+    "        temp_df = pd.DataFrame(data_json['data'])\n",
+    "        end = min(temp_df.created_utc) \n",
+    "        df = df.append(temp_df, ignore_index = True)\n",
+    "    else:\n",
+    "        print(data.headers['Content-Type']) \n",
+    "\n",
+    "# Get the current score from praw\n",
+    "print(f\"Got {len(df)} submissions.\")\n",
+    "print(\"Getting the updated values.\")\n",
+    "\n",
+    "scores = []\n",
+    "total_awards_received = []\n",
+    "ratios = []\n",
+    "\n",
+    "# Based on this: https://www.reddit.com/r/redditdev/comments/aoe4pk/praw_getting_multiple_submissions_using_by_id/\n",
+    "ids2 = [i if i.startswith('t3_') else f't3_{i}' for i in list(df.id)]\n",
+    "for submission in reddit.info(ids2): # Makes a single call to the PRAW API, much faster than doing them one by one.\n",
+    "    scores.append(submission.score)\n",
+    "    total_awards_received.append(extract_num_rewards(submission.all_awardings))\n",
+    "    ratios.append( submission.upvote_ratio)\n",
+    "\n",
+    "df['score'], df['total_awards_received'], df['upvote_ratio'] = scores, total_awards_received, ratios"
    ]
   },
   {
