--- a/Sandbox/PRAW.ipynb
+++ b/Sandbox/PRAW.ipynb
@@ -73,7 +73,7 @@
     "    \"awarders\" : submission.awarders, \n",
     "    \"awards\" : submission.all_awardings,\n",
     "    \"total_awards\" : None,\n",
-    "    \"url\" : submission.url # Only relevent if not a self post\n",
+    "    \"url\" : submission.url # Only relevant if not a self post\n",
     "    }\n",
     "    \n",
     "    content[\"total_awards\"] = extract_num_rewards(content[\"awards\"])\n",
